add_executable(new_target src/main.cpp
        libs/frameWork/tokens/tokenizer.h
        libs/frameWork/tokens/helper.h
        libs/frameWork/memory/heap.h
        libs/frameWork/containers/unordered_dense_map.h
        libs/frameWork/tokens/file.h
        libs/frameWork/core.h
        libs/frameWork/virtualMachine/code.h
        libs/frameWork/parser/parser.h
)
